Education and Technical Skills visibility

--- a/index.html
+++ b/index.html
@@ -46,7 +46,33 @@
   <section id="experience">
     <h2>Experience</h2>
     <div class="experience-grid">
-      <!-- Your experience cards go here -->
+      <div class="experience-card">
+        <h3>Product Manager | XYZ Corp <span>2023 - Present</span></h3>
+        <h4>Driving digital products from ideation to delivery</h4>
+        <ul>
+          <li>Led Agile teams to deliver 3 major product releases improving customer retention by 15%</li>
+          <li>Collaborated with cross-functional stakeholders to define product roadmap</li>
+          <li>Implemented user feedback loops improving feature adoption rates</li>
+        </ul>
+      </div>
+      <div class="experience-card">
+        <h3>Scrum Master | ABC Inc <span>2019 - 2023</span></h3>
+        <h4>Facilitating Agile ceremonies and removing blockers</h4>
+        <ul>
+          <li>Managed 2 scrum teams with 8-10 members each</li>
+          <li>Reduced sprint cycle time by 20% through process improvements</li>
+          <li>Coached team members on Agile best practices and continuous improvement</li>
+        </ul>
+      </div>
+      <div class="experience-card">
+        <h3>Business Analyst | DEF Ltd <span>2017 - 2019</span></h3>
+        <h4>Gathering requirements and driving stakeholder communication</h4>
+        <ul>
+          <li>Documented detailed functional specifications for software projects</li>
+          <li>Performed data analysis to identify business trends and requirements</li>
+          <li>Supported user acceptance testing and deployment planning</li>
+        </ul>
+      </div>
     </div>
   </section>
 
@@ -77,7 +103,36 @@
   <section id="skills">
     <h2>Skills</h2>
     <div class="skills-grid">
-      <!-- Skill groups here -->
+      <div class="skill-group">
+        <h3>Product Management</h3>
+        <div class="skills-chips">
+          <span>Agile</span>
+          <span>Scrum</span>
+          <span>Jira</span>
+          <span>Roadmapping</span>
+          <span>Stakeholder Management</span>
+        </div>
+      </div>
+      <div class="skill-group">
+        <h3>Technical Skills</h3>
+        <div class="skills-chips">
+          <span>SQL</span>
+          <span>Python</span>
+          <span>Power BI</span>
+          <span>AWS</span>
+          <span>RBAC</span>
+        </div>
+      </div>
+      <div class="skill-group">
+        <h3>Soft Skills</h3>
+        <div class="skills-chips">
+          <span>Communication</span>
+          <span>Leadership</span>
+          <span>Problem Solving</span>
+          <span>Collaboration</span>
+          <span>Adaptability</span>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -112,7 +167,7 @@
 
   <a href="#home" id="back-to-top" title="Back to top">↑</a>
 
-  <!-- ✨ Simple Floating Particles Script (no links, smooth float) -->
+  <!-- ✨ Simple Floating Particles Script (no links) -->
   <script>
     tsParticles.load("tsparticles", {
       fullScreen: { enable: true, zIndex: -10 },
@@ -131,7 +186,7 @@
       },
       particles: {
         color: { value: ["#BB86FC", "#03A9F4", "#FF9800", "#F50057"] },
-        links: { enable: false }, // 🔧 NO LINES
+        links: { enable: false }, // No lines between particles
         move: {
           enable: true,
           speed: 0.6,
