--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         }
       },
       particles: {
-        color: { value: ["#BB86FC", "#03A9F4", "#FF9800", "#F50057"] },
+        color: { value: ["#00bcd4", "#03A9F4", "#FF9800", "#F50057"] },
         links: { enable: false },
         move: {
           enable: true,
