--- a/index.html
+++ b/index.html
@@ -65,12 +65,74 @@
 
   <section id="certifications">
     <h2 class="gradient-header">Certifications</h2>
-    <ul>
-      <li>Certified Scrum Master (CSM)</li>
-      <li>SAFe 6 Certified Scrum Master</li>
-      <li>HIPAA for Professionals</li>
-      <li>Power BI Data Analyst Associate</li>
-    </ul>
+  <div class="cert-grid">
+    <div class="cert-card">
+      <img src="https://images.credly.com/images/28944964-3097-403d-a9a2-9718f2d4c353/image.png" alt="PSPO Badge" />
+      <div>
+        <strong>PSPO I – Scrum.org</strong>
+        <p>Mastered Scrum principles, backlog management, and product ownership.</p>
+        <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">View Credential</a>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://media.licdn.com/dms/image/D4E0BAQEfhU1nl8sl4A/company-logo_200_200/0/1708570642886?e=2147483647&v=beta&t=nF9nfdEPY6_kHF2IffOfIl-T3G4PUhV40oxrgftZCHM" alt="Atlassian Badge" />
+      <div>
+        <strong>Agile PM – Atlassian</strong>
+        <p>Learned Jira, Agile team collaboration, and iterative delivery.</p>
+        <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">View Credential</a>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://media.licdn.com/dms/image/D4E0BAQFeRQ3vSMvxnw/learning-public-crop_288_512/0/1693492517676?e=2147483647&v=beta&t=KMeFnJNjA3czkgb3j5INXaDCmDyQtkjXYA5sNFZoHRY" alt="Gen AI Badge" />
+      <div>
+        <strong>Generative AI – LinkedIn</strong>
+        <p>Explored AI-powered tools for product ideation and experience design.</p>
+        <a href="https://www.linkedin.com/learning/certificates/a41f8e4e6745809068443816da56340b0664a50913b7bef5d57fae84e3cbf579" target="_blank">View Credential</a>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/PMI_logo.svg" alt="PMP Badge" />
+      <div>
+        <strong>PMP – PMI</strong>
+        <p>Demonstrated advanced project planning, risk, and stakeholder management.</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://img.icons8.com/fluency/48/lock.png" alt="HIPAA Badge" />
+      <div>
+        <strong>HIPAA for Professionals</strong>
+        <p>Gained expertise in U.S. healthcare data privacy and compliance.</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://img.icons8.com/ios-filled/50/scrum.png" alt="CSM Badge" />
+      <div>
+        <strong>Certified Scrum Master (CSM)</strong>
+        <p>Built foundational Scrum knowledge and servant leadership skills.</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://img.icons8.com/ios/50/safe.png" alt="SAFe Badge" />
+      <div>
+        <strong>SAFe 6 Scrum Master</strong>
+        <p>Learned to scale Agile practices across enterprise-level teams.</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://seeklogo.com/images/M/microsoft-power-bi-logo-3BA5812580-seeklogo.com.png" alt="Power BI Badge" />
+      <div>
+        <strong>Power BI Data Analyst</strong>
+        <p>Skilled in dashboards, DAX, and storytelling with data.</p>
+      </div>
+    </div>
+  </div>
   </section>
 
   <section id="skills">
