--- a/index.html
+++ b/index.html
@@ -66,72 +66,42 @@
   <section id="certifications">
     <h2 class="gradient-header">Certifications</h2>
   <div class="cert-grid">
+
     <div class="cert-card">
-      <img src="https://images.credly.com/images/28944964-3097-403d-a9a2-9718f2d4c353/image.png" alt="PSPO Badge" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/PMI_logo.svg" alt="PMP Badge" />
       <div>
-        <strong>PSPO I – Scrum.org</strong>
-        <p>Mastered Scrum principles, backlog management, and product ownership.</p>
-        <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">View Credential</a>
+        <strong>Project Management Professional (PMP) – Project Management Institute (PMI)</strong>
+        <p>Validated advanced project planning, leadership, stakeholder and risk management across complex projects.</p>
       </div>
     </div>
 
     <div class="cert-card">
-      <img src="https://media.licdn.com/dms/image/D4E0BAQEfhU1nl8sl4A/company-logo_200_200/0/1708570642886?e=2147483647&v=beta&t=nF9nfdEPY6_kHF2IffOfIl-T3G4PUhV40oxrgftZCHM" alt="Atlassian Badge" />
+      <img src="https://media.licdn.com/dms/image/D4E0BAQEfhU1nl8sl4A/company-logo_200_200/0/1708570642886?e=2147483647&v=beta&t=nF9nfdEPY6_kHF2IffOfIl-T3G4PUhV40oxrgftZCHM" alt="Atlassian Agile Badge" />
       <div>
-        <strong>Agile PM – Atlassian</strong>
-        <p>Learned Jira, Agile team collaboration, and iterative delivery.</p>
+        <strong>Atlassian Agile Project Management Professional Certificate – Atlassian University</strong>
+        <p>Learned Agile principles, sprint planning, Jira workflows, and Agile team collaboration best practices.</p>
         <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">View Credential</a>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="https://images.credly.com/images/28944964-3097-403d-a9a2-9718f2d4c353/image.png" alt="PSPO I Badge" />
+      <div>
+        <strong>Professional Scrum Product Owner I (PSPO I) – Scrum.org</strong>
+        <p>Developed expertise in maximizing product value, managing backlogs, and applying Scrum principles in real-world scenarios.</p>
+        <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">View Credential</a>
       </div>
     </div>
 
     <div class="cert-card">
       <img src="https://media.licdn.com/dms/image/D4E0BAQFeRQ3vSMvxnw/learning-public-crop_288_512/0/1693492517676?e=2147483647&v=beta&t=KMeFnJNjA3czkgb3j5INXaDCmDyQtkjXYA5sNFZoHRY" alt="Gen AI Badge" />
       <div>
-        <strong>Generative AI – LinkedIn</strong>
-        <p>Explored AI-powered tools for product ideation and experience design.</p>
+        <strong>Generative AI for Product Managers – LinkedIn Learning</strong>
+        <p>Explored how to apply generative AI in product discovery, user research, content creation, and roadmap planning.</p>
         <a href="https://www.linkedin.com/learning/certificates/a41f8e4e6745809068443816da56340b0664a50913b7bef5d57fae84e3cbf579" target="_blank">View Credential</a>
       </div>
     </div>
 
-    <div class="cert-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/PMI_logo.svg" alt="PMP Badge" />
-      <div>
-        <strong>PMP – PMI</strong>
-        <p>Demonstrated advanced project planning, risk, and stakeholder management.</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="https://img.icons8.com/fluency/48/lock.png" alt="HIPAA Badge" />
-      <div>
-        <strong>HIPAA for Professionals</strong>
-        <p>Gained expertise in U.S. healthcare data privacy and compliance.</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="https://img.icons8.com/ios-filled/50/scrum.png" alt="CSM Badge" />
-      <div>
-        <strong>Certified Scrum Master (CSM)</strong>
-        <p>Built foundational Scrum knowledge and servant leadership skills.</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="https://img.icons8.com/ios/50/safe.png" alt="SAFe Badge" />
-      <div>
-        <strong>SAFe 6 Scrum Master</strong>
-        <p>Learned to scale Agile practices across enterprise-level teams.</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="https://seeklogo.com/images/M/microsoft-power-bi-logo-3BA5812580-seeklogo.com.png" alt="Power BI Badge" />
-      <div>
-        <strong>Power BI Data Analyst</strong>
-        <p>Skilled in dashboards, DAX, and storytelling with data.</p>
-      </div>
-    </div>
   </div>
   </section>
 
